# bevy-boids

./: Cargo.toml  README.md
assets/models/: bird.gltf
benches/: coherence_bench.rs  mod.rs  spatial_bench.rs  system_bench.rs
benches/spatial/: bruteforce.rs  kdtree_bench.rs  kdtree_space.rs  mod.rs  rtree_bench.rs  rtree_space.rs  voxel_bench.rs  voxel_space.rs
benches/systems/: bruteforce.rs  kdtree_space.rs  mod.rs  rtree_space.rs  voxel_space.rs
examples/: flock.rs  flock_collider.rs  interface.rs  test_interface.rs
src/: boid.rs  boids.rs  camera_control.rs  debug_systems.rs  flock.rs  helper.rs  index_space.rs  interface.rs  lib.rs  main.rs  perception.rs  physics.rs  predator.rs
src/behaviours/: alignment.rs  avoidance.rs  bounds.rs  coherence.rs  mod.rs  separation.rs  velocity.rs  velocity_adjust.rs
src/spatial/: index_partition.rs  kdtree.rs  mod.rs  partition.rs  rtree.rs  simple_list.rs  voxel.rs
