# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "bevy_flock"
version = "0.3.1"
edition = "2021"

[dependencies]
bevy = { version = "0.10", features = ["dynamic_linking"] }
bevy_egui = "0.20"
rand = "0.8.5"
rand_distr = "0.4.3"
bevy_prototype_debug_lines = "0.9"
bevy-inspector-egui = "0.18"
bevy_rapier2d = { version = "0.21.0", features = [ "simd-stable", "debug-render-2d" ] }
rstar = "0.10.0"
kd-tree = "0.5.1"


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
plotters = "0.3.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[[bench]]
name = "boids"
path = "benches/mod.rs"
harness = false

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
